Line aligned issue in week view

--- a/assets/front-end/css/event-calendar/index.css
+++ b/assets/front-end/css/event-calendar/index.css
@@ -23,7 +23,8 @@
 .fc-row table thead:first-child tr:first-child th {
   font-family: roboto;
   font-size: 14px;
-  padding: 10px;
+  /*
+  padding:10px; */
 }
 
 .fc-day-number {
